Add icon for mac by creating a script to convert svg to icns

--- a/storage-space-app/images.qrc
+++ b/storage-space-app/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/app-icon.ico</file>
+        <file>images/storagespace.icns</file>
     </qresource>
 </RCC>
